--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type":"module",
   "name": "@mimicry/tami",
   "version": "0.1.3",
   "description": "Calculates the Time Adjusted Market Index value of a collection of tradable assets",
@@ -41,6 +42,7 @@
     "node": ">=10"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "date-fns": "^2.28.0"
   },
   "devDependencies": {
